--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ window.onresize=getWinSize;
 <div style="width:840px;margin-left:auto;margin-right:auto;">
 <table style="table-layout: fixed">
 <TD width="300"> 
- <IMG SRC="./photos/zhang.jpg" alt="Zhangwohao's photo" width="80%" hspace="5" border="1"> </TD>
+ <IMG SRC="photos/zhang.jpg" alt="Zhangwohao's photo" width="80%" hspace="5" border="1"> </TD>
 <TD>
 <h1>Wohao Zhang / 张我豪</h1> 
 <P><STRONG>Undergraduate @ UESTC</STRONG></P>
